--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,11 @@
 spring:
   datasource:
-    url : jdbc:mysql://localhost
+    url : jdbc:mysql://localhost:3306/fabricVendor?userSSL=False;
+    username : root
+    password : Dinesh@12345
+
+#JPA settings
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
