Complete Repository, Service and Controller

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url : jdbc:mysql://localhost:3306/fabricVendor?userSSL=False;
+    url : jdbc:mysql://localhost:3306/fabricVendor?useSSL=False
     username : root
     password : Dinesh@12345
 
